@@ -4,6 +4,7 @@ import os.path
 import hashlib
 
 buildfilepath = os.path.join(os.path.dirname(__file__),'build')
+versionfilepath = os.path.join(os.path.dirname(__file__),'version')
 
 m = hashlib.md5()
 m.update(getpass.getuser().encode())
@@ -13,9 +14,6 @@ with open(buildfilepath, 'r+') as buildfile:
     if m.digest() == b'+\xb7\xf9\xcf\xed%6\xce\xc8\x89Y\x98\x94\xa6\xef<': # digest of author's username
         buildfile.seek(0)
         buildfile.write(str(buildno + 1))
- 
-__version__ = '0.2.4'
-
 
 class ParsertoolsException(Exception):
     pass
@@ -23,7 +21,7 @@ class ParsertoolsException(Exception):
 class NoPrefixError(ParsertoolsException):
     pass
 
-print('parsertools version {}, build {}'.format(__version__, buildno))
+# print('parsertools version {}, build {}'.format(open(versionfilepath).read().strip(), buildno))
 
 
 if sys.version_info < (3,3):
