@@ -1,4 +1,5 @@
-Applied, but not yet released (Build 980)
+Applied, but not yet released (Build 1024)
+- Moved version info out of __init__.py to separate file, alltests now prints version and build numbers
 - Renamed ParseStruct "pattern" attribute to "_pattern" 
 - Converted func_test to unittest format, renamed to func_unittest
 - Cleaned up code and docstrings in base.py and sparqlparser.py
